--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -4,3 +4,26 @@
 :root {
   background-color: whitesmoke;
 }
+
+
+/* Scroll bar stylings */
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--lightestgrey); 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
