--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -7,22 +7,22 @@
 
 /* Scroll bar stylings */
 ::-webkit-scrollbar {
-  width: 2px;
-  height: 2px;
+  width: 8px;
+  height: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: var(--lightestgrey);
+  background: #4b5563;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 5px;
+  background: rgb(156 163 175);
+  border-radius: 15px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: rgb(249 250 251);
 }
