--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,#__next {
+        height: 100%;
+      }
+
 :root {
   background-color: whitesmoke;
 }
