--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
 
 html,
 body,
