--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -34,3 +34,36 @@ body,
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(249 250 251);
 }
+
+
+.badge-red {
+  background-color: rgb(239 68 68);
+}
+
+.badge-amber {
+  background-color: rgb(245 158 11);
+}
+
+.badge-lime {
+  background-color: rgb(132 204 22);
+}
+
+.badge-green {
+  background-color: rgb(34 197 94);
+}
+
+.badge-emerald {
+  background-color: rgb(16 185 129);
+}
+
+.badge-teal {
+  background-color: rgb(20 184 166);
+}
+
+.badge-cyan {
+  background-color: rgb(6 182 212);
+}
+
+.badge-sky {
+  background-color: rgb(14 165 233);
+}
