--- a/src/common/components/ui/KebabMenu/style.module.css
+++ b/src/common/components/ui/KebabMenu/style.module.css
@@ -5,30 +5,31 @@
   box-sizing: border-box;
   padding: 0 16px;
   top: 12px;
-  
 }
 
-.kebab>figure {
-    width: 6px;
-    height: 6px;
-    border-radius: 5px;
-    background: #D3D3D3;
-    margin: 3px 0;
-  }
+.kebab > figure {
+  width: 6px;
+  height: 6px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  margin: 3px 0;
+}
 
 .middle {
-  transition: all 0.25s cubic-bezier(.72,1.2,.71,.72);
+  transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
   transform: scale(1);
   position: relative;
-  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
-  -webkit-filter: blur(.1px);
-  filter: blur(.1px);
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16),
+    0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+  -webkit-filter: blur(0.1px);
+  filter: blur(0.1px);
 }
 
 .middle_active {
   transform: scale(4.5);
-  transition: all 0.25s cubic-bezier(.32,2.04,.85,.54);
-  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+  transition: all 0.25s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16),
+    0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
 }
 
 .cross {
@@ -39,13 +40,12 @@
   margin-top: -1px;
   font-family: 'Nunito', sans-serif;
   color: white;
-  transition: all 0.2s cubic-bezier(.72,1.2,.71,.72);
+  transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
   font-size: 22px;
   user-select: none;
 }
 
 .cross_active {
   transform: translate(-50%, -50%) scale(1);
-  transition: all 0.15s cubic-bezier(.32,2.04,.85,.54);
+  transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
 }
-
